# haskell-learn

./: Clf.hs  README.md  haskell-learn.cabal
DS/: Dataset.hs
Graph/: Graph.hs
KNN/: KNN.hs
SVM/: SVM.hs
